homarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: homarr
  labels:
    app: homarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      containers:
      - name: homarr
        image: ghcr.io/ajnart/homarr:latest
        ports:
        - containerPort: 7575
        volumeMounts:
        - mountPath: /data
          name: homarr-data
        - mountPath: /app/data/configs
          name: homarr-config
      volumes:
      - name: homarr-data
        persistentVolumeClaim:
          claimName: homarr-data
      - name: homarr-config
        persistentVolumeClaim:
          claimName: homarr-config
